--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -11,4 +11,5 @@ body {
 #main-content h1:before { content: ""; }
 p { color: #410c18; font-size: 1.5em; }
 li { color: #410c18; font-size: 1.2em; }
-ul { background-color: rgba(215, 224, 250, 0.507);}
+.container { background-color: rgba(215, 224, 250, 0.507); }
+// ul { background-color: rgba(215, 224, 250, 0.507);}
