--- a/docs/src/index.css
+++ b/docs/src/index.css
@@ -12,3 +12,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+ul {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  background-color: rgb(189, 35, 73, 0.4);
+  font-size: 20px;
+  font-weight: 500;
+}
+
+ul li {
+  display: block;
+}
