--- a/docs/src/index.css
+++ b/docs/src/index.css
@@ -14,14 +14,9 @@ code {
 }
 
 ul {
-  padding: 0;
-  margin: 0;
   width: 100%;
-  background-color: rgb(189, 35, 73, 0.4);
   font-size: 20px;
-  font-weight: 500;
-}
-
-ul li {
-  display: block;
+  font-weight: 700;
+  text-align: center;
+  color: #29050d;
 }
