--- a/packages/frontend/app/app.css
+++ b/packages/frontend/app/app.css
@@ -2,11 +2,11 @@
   font-family: "font";
   src:
     local("font"),
-    url("font.ttf") format("truetype");
+    url("/font.ttf") format("truetype");
 }
 
 body {
-  background: url(bg.jpg);
+  background: url("/bg.jpg");
 }
 
 .font {
